<resources>
    <string name="app_name">Mercado verde</string>
    <string name="correo">Correo Electronico</string>
    <string name="Nombre_apellido">Nombre y apellido</string>
    <string name="cedula">Numero de cédula</string>
    <string name="celular">Número de celular</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetir_contrasena">Repetir contraseña</string>
    <string name="cliente">Cliente</string>
    <string name="proveedor">Proveedor</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string-array name="Ciudades">
        <item>Medellín</item>
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Manizales</item>
    </string-array>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="proveedores">Proveedores</string>
    <string name="ayuda">Ayuda</string>
    <string name="terminosycondiciones">Terminos y condiciones</string>
    <string name="historial">Historial de compras</string>
    <string name="info_inicio">Aca se mostraran los productos guardaron en la base de datos</string>
    <string name="info_buscar">Se mostraran los productos unicamente que el usuario desee</string>
    <string name="info_ayuda">Mostrara al usuario como usar la aplicación</string>
    <string name="info_historial">El historial de compras del usuario</string>
    <string name="info_perfil">Mostrara información del usuario registrado y permitira cambiar la foto de perfil</string>
    <string name="info_proveedor">Mostrara información de la ubicación de los distintos proveedores</string>
    <string name="info_tyc">Mostraran los terminos y condiciones de uso de la aplicación</string>
</resources>

