<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="Registro"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Nombre completo"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/Nombre_apellido"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Cedula"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/cedula"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Celular"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/celular"
            android:inputType="phone" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Correo electronico"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_correo_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Contraseña"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_contrasena_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Repetir contraseña"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_repe_contra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/repetir_contrasena"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Ciudad"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spinner_ciudad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:entries="@array/Ciudades" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Tipo de registro"
            android:textColor="@color/black" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radiobuton_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:checked="true"
                android:text="@string/cliente" />

            <RadioButton
                android:id="@+id/radiobuton_proveedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/proveedor" />

            <Button
                android:id="@+id/boton_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/holo_green_dark"
                android:text="Registrar"
                android:textColor="@color/white" />

        </RadioGroup>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>